# honeycomb

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: Edge.h  ExporterOBJ.h  HexGridMatrix.h  Vertex.h  VisualizerVTK.h
src/: Edge.cpp  ExporterOBJ.cpp  HexGridMatrix.cpp  Vertex.cpp  VisualizerVTK.cpp  main.cpp
